--- a/home.html
+++ b/home.html
@@ -23,10 +23,10 @@
 
 			    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">	
 			      <div class="navbar-nav ml-auto">
-			        <a class="nav-link" href="#" tabindex="-1">Specials</a>
-			        <a class="nav-link" href="#">Reservations</a>
-			        <a class="nav-link" href="#">Gallery</a>
-			        <a class="nav-link" href="#">Contact</a>
+			        <a class="nav-link" href="specials.html" tabindex="-1">Specials</a>
+			        <!-- <a class="nav-link" href="#">Reservations</a> -->
+			        <a class="nav-link" href="gallery.html">Gallery</a>
+			        <a class="nav-link" href="contactus.html">Contact</a>
 			      </div>
 			    </div>
 		  	</div>
@@ -36,7 +36,7 @@
 			
 
 
-	<div class="container-fluid">
+	<div class="container">
 	<div class="card card-inverse text-justify text-white" style="width: 98rem;"> 
 		<div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
   			<div class="carousel-inner">
@@ -66,7 +66,7 @@
 				</div>
             </div>
 
-            <div class="card-img-overlay">
+            <!-- <div class="card-img-overlay">
             	<div class="container-fluid">
 					<div class="booking_area">
 						<form class="form-inline" action="/action_page.php">
@@ -79,7 +79,7 @@
 						</form>
 					</div>
 				</div>
-			</div>
+			</div> -->
     	</div>                
 	</div>	
 	</div>
@@ -139,9 +139,9 @@
     		<div class="col-lg-4 col-md-6 col-sm-6">
 			    <h5>Quick Links</h5>
 			    	<div class="list-group">
-			  			<a href="#">Gallery</a>
-						<a href="#">Reservations</a>
-						<a href="#">Specials</a>
+			  			<a href="gallery.html">Gallery</a>
+						<!-- <a href="#">Reservations</a> -->
+						<a href="specials.html">Specials</a>
 					</div>
 			</div>
 	<!--Empty Space-->
@@ -151,8 +151,9 @@
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<h5>Contact Us</h5>
 			    		<p>
-			    			<i class="fa fa-phone fa-fw"></i>
-			    				(860) 646-2300
+			    			<!-- <i class="fa fa-phone fa-fw"></i>
+			    				(860) 646-2300 -->
+			    			<a href="tel:8606462300" >(860) 646-2300</a>
 			    		</p>
 			    		<p>
 			    			<i class="fa fa-map-pin fa-fw"></i>
@@ -172,113 +173,3 @@
 </body>
 </html>
 
-
-<!-- <div class="container-fluid">
-		<div class="booking_area">
-			<form class="form-inline" action="/action_page.php">
-				  <label for="Check-In">Check In:</label>
-				  <input type="Check-In" id="Check-In" placeholder="Check-In Date" name="checkin">
-				  <label for="CheckOut">Check Out:</label>
-				  <input type="checkout" id="CheckOut" placeholder="Check Out Date" name="checkout">
-				  
-				  <button type="submit">Check Availability</button>
-			</form>
-		</div>
-	</div> -->
-
-
-
-
-
-			<!-- <form name="form1" method="post" onsubmit="return checkdate(this.CheckIn,this.CheckOut);"
-              action="https://reservation.asiwebres.com/SearchAvailability.aspx?id=0f04d53dfb4147f486bba498edd672b0&Operation=Date">
-				<div class="row">
-					<div class="col-lg-3 col-sm-6 col-6">
-						<div class="booking_item">
-							<br/><p>Check - in</p>
-							<span class="checkInDay"></span>
-							<span class="checkInMonth"></span>
-							<span class="checkInYear"></span>
-							<label for="CheckIn">
-								<i class="fa fa-angle-down"></i>
-							</label>
-							<input type="text" class="form-control" name='txtcheckindate' id="CheckIn" aria-describedby="emailHelp" />
-						</div>
-					</div>
-					<div class="col-lg-3 col-sm-6 col-6">
-						<div class="booking_item">
-							<p>Check - out</p>
-							<span class="checkOutDay"></span>
-							<span class="checkOutMonth"></span>
-							<span class="checkOutYear"></span>
-							<label for="CheckOut">
-								<i class="fa fa-angle-down"></i>
-							</label>
-							<input type="text" class="form-control" name='txtcheckoutdate' id="CheckOut" aria-describedby="emailHelp" />
-						</div>
-					</div>
-					<div class="col-lg-3 col-sm-6 col-6 coupon-code">
-						<div class="booking_item">
-							<button type="submit" class="main_btn text-uppercase">check availabity</button>
-						</div>
-					</div>
-				</div>
-			</form>
-		</div>
-	</div>	
-					 -->
-		<!-- 		
-			</div>
-	</div>
-
-		<div class="banner_inner d-flex align-items-center">
-			<div class="overlay bg-parallax" data-stellar-ratio="2" data-stellar-vertical-offset="0" data-background=""></div>
-		</div> -->
-	
-
-	<!-- <div id="header">
-		<div class="topnav-right">
-			<button type="button" class="btn btn-primary btn-block">Like</button>
-	      	<button class="btn btn-danger" type="submit">Info</button>
-	      	<button class="btn btn-info" type="submit">Remove</button>
-			
-			
-	      	<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
-    </ul>
-  </div>
-</nav>
-	<!-- <div id="main1">
-		<img src="bird.jpg">
-	</div>
-
-	<div id="main2">
-
-	</div>
-
-	<div id="footer">
-
-	</div>
-
- -->
-
- <!-- <div class="row">
-         	<img src="outside.jpg" alt="" title="" class="card-img-top img-responsive"/>    -->   
-            <!--overlay concept-->
-            <!-- <div class="card-img-overlay">
-                <div class="banner_content text-center">
-					<h4 class="top-text">Welcome to</h4>
-					<h1>Manchester Inn </h1>
-					<p class="text">Enjoy the comfort and Make Yourself at Home</p>
-				</div>
-            </div>
-    	</div> 
- -->
